# faust4rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix
faust-test/: Cargo.toml  README.md  bench_template.rs  build.rs  differentreferences.rs  faust-template.rs  test.ers
faust-test/benches/: main.rs
faust-test/benches/flag/: APF.rs  comb_delay2.rs  comb_delay2_edited_static.rs  matrix_diy.rs  mod.rs
faust-test/benches/flagnoarr/: APF.rs
faust-test/benches/flagnoarrt/: APF.rs
faust-test/benches/flagrt/: matrix.rs  mod.rs
faust-test/benches/flagt/: APF.rs
faust-test/benches/flagvecvs32/: APF.rs  mod.rs
faust-test/benches/flagvecvs4/: APF.rs
faust-test/benches/flagvecvs64/: APF.rs
faust-test/src/: main.rs
faust-xml/: Cargo.toml
faust-xml/src/: lib.rs
faust-xml/tests/: tests.rs
npins/: sources.json
