[package]
name = "faust-test"
version = "0.1.0"
edition = "2021"

[features]
cfg = ['default-boxed']

[dependencies]
faust-types = { path = "../rust-faust/faust-types" } 
default-boxed = { version = "*", optional = true }

[build-dependencies]
faust-build = { path = "../rust-faust/faust-build" } #faust_path branch
quote = "^1.0"
prettyplease = "^0.2"
proc-macro2 = "^1.0"
syn = "^2.0"