[package]
name = "faust-xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cfg = ['default-boxed']

[dependencies]
faust-types = { path = "../../forks/rust-faust/faust-types" } 
default-boxed = { version = "*", optional = true }
serde = { version = "1.0", features = ["derive"] } 
quick-xml = { version = "^0.36", features = ["serialize", "serde-types"] } 
serde_path_to_error = "0.1.16"

[build-dependencies]
faust-build = { path = "../../forks/rust-faust/faust-build" } 
